# routes/routes.go
@@ -2,10 +2,13 @@ package routes
 
 import (
 	swagger "github.com/arsmn/fiber-swagger/v2"
+	"github.com/dinopuguh/mycap-backend/auth"
+	"github.com/dinopuguh/mycap-backend/services/group"
 	"github.com/dinopuguh/mycap-backend/services/user"
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/fiber/v2/middleware/cors"
 	"github.com/gofiber/fiber/v2/middleware/logger"
+	jwtware "github.com/gofiber/jwt/v2"
 )
 
 // New create an instance of MyCap routes
@@ -32,12 +35,17 @@ func New() *fiber.App {
 	v1.Get("/users", user.GetAll)
 	v1.Delete("/users/:id", user.Delete)
 
-	// app.Use(jwtware.New(jwtware.Config{
-	// 	SigningKey: auth.MySigningKey,
-	// 	Claims:     &auth.JwtCustomClaims{},
-	// }))
+	v1.Get("/groups", group.GetAll)
 
-	// app.Post("/api/v1/address", address.New)
+	app.Use(jwtware.New(jwtware.Config{
+		SigningKey: auth.SigningKey,
+	}))
+
+	v1.Put("/users/:id", user.Update)
+
+	v1.Post("/groups", group.New)
+	v1.Post("/join-groups", group.Join)
+	v1.Post("/leave-groups", group.Leave)
 
 	return app
 }
